Changed bg on button-white + fixed spacing.

--- a/style.css
+++ b/style.css
@@ -181,6 +181,10 @@ ul.menu li a:hover {
 	background-color: var(--red);
 }
 
+.button__white a:hover {
+	background-color: #eee;
+}
+
 .c-full-width-image {
 	height: 650px;
 	background-image: url("/img/prettydice.png");
@@ -262,11 +266,11 @@ ul.menu li a {
 .c-footer-text {
 	color: var(--offwhite);
 	font-size: 14px;
+	padding: 15px 0px;
 }
 
 .c-footer-text a {
 	font-weight: 700;
-	padding: 0px 15px;
 }
 
 /*Media Query bullshit?*/
